@@ -39,7 +39,8 @@ public class HtmlConductor extends HtmlTrainCommon {
                     FileUtil.readURL(FileUtil.findURL(Bundle.getMessage(locale,"ConductorSnippet.html"))), 
                     train.getIconName(), 
                     StringEscapeUtils.escapeHtml4(train.getDescription()), 
-                    StringEscapeUtils.escapeHtml4(train.getComment()).replaceAll("\n", "<br>"),
+                    convertToHTMLColor(
+                            StringEscapeUtils.escapeHtml4(train.getCommentWithColor())),
                     Setup.isPrintRouteCommentsEnabled() ? train.getRoute().getComment() : "", 
                     strings.getProperty("Terminated"), 
                     "", // terminated train has nothing to do // NOI18N
@@ -65,10 +66,10 @@ public class HtmlConductor extends HtmlTrainCommon {
                 FileUtil.readURL(FileUtil.findURL(Bundle.getMessage(locale,"ConductorSnippet.html"))), 
                 train.getIconName(), 
                 StringEscapeUtils.escapeHtml4(train.getDescription()),
-                StringEscapeUtils.escapeHtml4(train.getComment()).replaceAll("\n", "<br>"),
+                convertToHTMLColor(StringEscapeUtils.escapeHtml4(train.getCommentWithColor())),
                 Setup.isPrintRouteCommentsEnabled() ? train.getRoute().getComment() : "", 
                 getCurrentAndNextLocation(),
-                getLocationComments().replaceAll("\n", "<br>"),
+                convertToHTMLColor(getLocationComments()),
                 pickupEngines(engineList, location), // engines in separate section
                 pickups, setouts, localMoves,
                 dropEngines(engineList, location), // engines in separate section
@@ -151,7 +152,7 @@ public class HtmlConductor extends HtmlTrainCommon {
             // add route comment
             if (!routeLocation.getComment().isBlank()) {
                 builder.append(String.format(locale, strings.getProperty("RouteLocationComment"), StringEscapeUtils  // NOI18N
-                        .escapeHtml4(routeLocation.getComment())));
+                        .escapeHtml4(routeLocation.getCommentWithColor())));
             }
 
             builder.append(getTrackComments(routeLocation, carList));
@@ -159,7 +160,7 @@ public class HtmlConductor extends HtmlTrainCommon {
             // add location comment
             if (Setup.isPrintLocationCommentsEnabled() && !routeLocation.getLocation().getComment().isEmpty()) {
                 builder.append(String.format(locale, strings.getProperty("LocationComment"), StringEscapeUtils  // NOI18N
-                        .escapeHtml4(routeLocation.getLocation().getComment())));
+                        .escapeHtml4(routeLocation.getLocation().getCommentWithColor())));
             }
         }
 
@@ -185,7 +186,7 @@ public class HtmlConductor extends HtmlTrainCommon {
                 }
             } else {
                 log.debug("No work ({})", routeLocation.getComment());               
-                if (routeLocation.getComment().trim().isEmpty()) {
+                if (routeLocation.getComment().isBlank()) {
                     // no route comment, no work at this location
                     if (train.isShowArrivalAndDepartureTimesEnabled()) {
                         if (routeLocation == train.getTrainDepartsRouteLocation()) {
@@ -207,26 +208,24 @@ public class HtmlConductor extends HtmlTrainCommon {
                 } else {
                     // if a route comment, then only use location name and route comment, useful for passenger
                     // trains
-                    if (!routeLocation.getComment().equals(RouteLocation.NONE)) {
-                        if (routeLocation.getComment().trim().length() > 0) {
-                            builder.append(String.format(locale, strings.getProperty("CommentAt"), // NOI18N
-                                    routeLocationName, StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
-                        }
+                    if (!routeLocation.getComment().isBlank()) {
+                        builder.append(String.format(locale, strings.getProperty("CommentAt"), // NOI18N
+                                routeLocationName, StringEscapeUtils
+                                        .escapeHtml4(routeLocation.getCommentWithColor())));
                     }
                     if (train.isShowArrivalAndDepartureTimesEnabled()) {
                         if (routeLocation == train.getTrainDepartsRouteLocation()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("CommentAtWithDepartureTime"), routeLocationName, train // NOI18N
                                     .getFormatedDepartureTime(), StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
+                                            .escapeHtml4(routeLocation.getCommentWithColor())));
                         } else if (!routeLocation.getDepartureTime().equals(RouteLocation.NONE)) {
                             builder.append(String.format(locale, strings
                                     .getProperty("CommentAtWithDepartureTime"), routeLocationName, // NOI18N
                                     routeLocation.getFormatedDepartureTime(), StringEscapeUtils
-                                    .escapeHtml4(routeLocation.getComment())));
+                                            .escapeHtml4(routeLocation.getCommentWithColor())));
                         } else if (Setup.isUseDepartureTimeEnabled() &&
-                                !routeLocation.getComment().equals(RouteLocation.NONE)) {
+                                !routeLocation.getComment().isBlank()) {
                             builder.append(String.format(locale, strings
                                     .getProperty("NoScheduledWorkAtWithDepartureTime"), routeLocationName, // NOI18N
                                     train.getExpectedDepartureTime(routeLocation)));
@@ -236,7 +235,7 @@ public class HtmlConductor extends HtmlTrainCommon {
                 // add location comment
                 if (Setup.isPrintLocationCommentsEnabled() && !routeLocation.getLocation().getComment().isEmpty()) {
                     builder.append(String.format(locale, strings.getProperty("LocationComment"), StringEscapeUtils  // NOI18N
-                            .escapeHtml4(routeLocation.getLocation().getComment())));
+                            .escapeHtml4(routeLocation.getLocation().getCommentWithColor())));
                 }
             }
         } else {
